finish analyzer + add rating instead of views