@@ -1,5 +1,7 @@
 package ru.yandex.practicum.service.impls;
 
+import client.AnalyzerClient;
+import client.CollectorClient;
 import client.StatsClient;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.AccessLevel;
@@ -16,17 +18,20 @@ import ru.yandex.practicum.errors.exceptions.NotFoundException;
 import ru.yandex.practicum.event.dtos.EventFullDto;
 import ru.yandex.practicum.event.dtos.EventShortDto;
 import ru.yandex.practicum.event.enums.EventState;
+import ru.yandex.practicum.grpc.stats.eventPredictions.RecommendedEventProto;
 import ru.yandex.practicum.location.LocationFeignClient;
 import ru.yandex.practicum.location.dtos.LocationDto;
 import ru.yandex.practicum.mapper.EventMapper;
 import ru.yandex.practicum.model.EventModel;
 import ru.yandex.practicum.repository.EventRepository;
+import ru.yandex.practicum.request.RequestFeignClient;
 import ru.yandex.practicum.service.PublicEventService;
 import ru.yandex.practicum.users.UsersFeignClient;
 import ru.yandex.practicum.users.dtos.UserShortDto;
 import stat.dto.EndpointHitDto;
 import stat.dto.ViewStatsDto;
 
+import java.time.Instant;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -44,10 +49,12 @@ public class PublicEventServiceImpl implements PublicEventService {
     EventMapper mapper;
     EventRepository repository;
 
-    StatsClient statsClient;
     CategoryFeignClient categoryClient;
     UsersFeignClient usersClient;
     LocationFeignClient locationClient;
+    AnalyzerClient analyzerClient;
+    CollectorClient collectorClient;
+    RequestFeignClient requestClient;
 
     public List<EventShortDto> getEventsWithFilters(String text, List<Long> categories, Boolean paid,
                                                     LocalDateTime rangeStart, LocalDateTime rangeEnd,
@@ -61,18 +68,6 @@ public class PublicEventServiceImpl implements PublicEventService {
         List<EventModel> events = repository.findAllByFiltersPublic(text, categories, paid, rangeStart, rangeEnd,
                 onlyAvailable, PageRequest.of(from, size));
 
-        try {
-            statsClient.postHit(EndpointHitDto.builder()
-                    .app("main-service")
-                    .uri(request.getRequestURI())
-                    .ip(request.getRemoteAddr())
-                    .timestamp(LocalDateTime.now())
-                    .build());
-        } catch (Exception e) {
-            log.error("Не удалось отправить запрос о сохранении на сервер статистики");
-        }
-
-        Map<Long, Long> views = getAmountOfViews(events);
         log.debug("Собираем события для ответа");
 
         return events.stream()
@@ -80,13 +75,16 @@ public class PublicEventServiceImpl implements PublicEventService {
                     CategoryDto categoryDto = categoryClient.getCategoryById(eventModel.getCategoryId());
                     UserShortDto userDto = usersClient.getUserById(eventModel.getInitiatorId());
                     EventShortDto eventShort = mapper.toShortDto(eventModel, categoryDto, userDto);
-                    eventShort.setViews(views.getOrDefault(eventModel.getId(), 0L));
+                    eventShort.setRating(analyzerClient.getInteractionsCount(List.of(eventModel.getId()))
+                            .map(RecommendedEventProto::getScore)
+                            .findFirst()
+                            .orElse(0.0));
                     return eventShort;
                 })
                 .collect(Collectors.toCollection(ArrayList::new));
     }
 
-    public EventFullDto getEventById(Long eventId, HttpServletRequest request) {
+    public EventFullDto getEventById(Long eventId, HttpServletRequest request, Long userId) {
 
         log.debug("Получен запрос на получение события по id");
         EventModel event = repository.findById(eventId)
@@ -96,25 +94,17 @@ public class PublicEventServiceImpl implements PublicEventService {
             throw new NotFoundException(String.format("Событие с id= %d недоступно, так как не опубликовано", eventId));
         }
 
-        try {
-            statsClient.postHit(EndpointHitDto.builder()
-                    .app("main-service")
-                    .uri(request.getRequestURI())
-                    .ip(request.getRemoteAddr())
-                    .timestamp(LocalDateTime.now())
-                    .build());
-        } catch (Exception e) {
-            log.error("Не удалось отправить запрос о сохранении на сервер статистики");
-        }
+        collectorClient.collectUserAction(userId, eventId, "ACTION_VIEW", Instant.now());
 
         log.debug("Собираем событие для ответа");
         CategoryDto categoryDto = categoryClient.getCategoryById(event.getCategoryId());
         UserShortDto userDto = usersClient.getUserById(event.getInitiatorId());
         LocationDto locationDto = locationClient.getLocation(event.getLocationId());
         EventFullDto result = mapper.toFullDto(event, categoryDto, userDto, locationDto);
-        Map<Long, Long> views = getAmountOfViews(List.of(event));
-        result.setViews(views.getOrDefault(event.getId(), 0L));
-
+        result.setRating(analyzerClient.getInteractionsCount(List.of(event.getId()))
+                .map(RecommendedEventProto::getScore)
+                .findFirst()
+                .orElse(0.0));
         return result;
     }
 
@@ -128,54 +118,58 @@ public class PublicEventServiceImpl implements PublicEventService {
         UserShortDto userDto = usersClient.getUserById(event.getInitiatorId());
         LocationDto locationDto = locationClient.getLocation(event.getLocationId());
         EventFullDto result = mapper.toFullDto(event, categoryDto, userDto, locationDto);
-        Map<Long, Long> views = getAmountOfViews(List.of(event));
-        result.setViews(views.getOrDefault(event.getId(), 0L));
-
+        result.setRating(analyzerClient.getInteractionsCount(List.of(event.getId()))
+                .map(RecommendedEventProto::getScore)
+                .findFirst()
+                .orElse(0.0));
         return result;
     }
 
+    @Override
     public boolean checkInitiatorAndEventIds(Long eventId, Long userId) {
         log.info("Проверка для реквеста");
         return repository.existsByIdAndInitiatorId(eventId, userId);
     }
 
+    @Override
     public boolean checkEventsByCategoryId(Long categoryId) {
         log.info("Получение событий для сервиса категорий");
         List<EventModel> events = repository.findAllByCategoryId(categoryId);
         return !events.isEmpty();
     }
 
-    private Map<Long, Long> getAmountOfViews(List<EventModel> events) {
-        if (events == null || events.isEmpty()) {
-            return Collections.emptyMap();
-        }
-        List<String> uris = events.stream()
-                .map(event -> "/events/" + event.getId())
-                .distinct()
-                .collect(Collectors.toList());
+    @Override
+    @Transactional(readOnly = true)
+    public List<EventShortDto> getRecommendation(Long userId, Long max) {
+        log.info("Получен запрос на рекомендации для пользователя");
+        List<Long> eventIds = analyzerClient.getRecommendationsForUser(userId, max)
+                .map(RecommendedEventProto::getEventId)
+                .toList();
+        List<EventModel> events = repository.findAllByIdIn(eventIds);
 
-        LocalDateTime startTime = LocalDateTime.now().minusDays(1);
-        LocalDateTime endTime = LocalDateTime.now().plusMinutes(5);
+        return events.stream()
+                .map(eventModel -> {
+                    CategoryDto categoryDto = categoryClient.getCategoryById(eventModel.getCategoryId());
+                    UserShortDto userDto = usersClient.getUserById(eventModel.getInitiatorId());
+                    EventShortDto eventShort = mapper.toShortDto(eventModel, categoryDto, userDto);
+                    eventShort.setRating(analyzerClient.getInteractionsCount(List.of(eventModel.getId()))
+                            .map(RecommendedEventProto::getScore)
+                            .findFirst()
+                            .orElse(0.0));
+                    return eventShort;
+                })
+                .collect(Collectors.toCollection(ArrayList::new));
+    }
 
-        Map<Long, Long> viewsMap = new HashMap<>();
-        try {
-            log.debug("Получение статистики по времени для URI: {} с {} по {}", uris, startTime, endTime);
-            List<ViewStatsDto> stats = statsClient.getStatistics(
-                    startTime,
-                    endTime,
-                    uris,
-                    true
-            );
-            log.debug("Получение статистики");
-            if (stats != null && !stats.isEmpty()) {
-                for (ViewStatsDto stat : stats) {
-                    Long eventId = Long.parseLong(stat.getUri().substring("/events/".length()));
-                    viewsMap.put(eventId, stat.getHits());
-                }
-            }
-        } catch (Exception e) {
-            log.error("Не удалось получить статистику");
+    @Override
+    @Transactional(readOnly = true)
+    public void addLike(Long eventId, Long userId) {
+        EventModel event = repository.findById(eventId)
+                .orElseThrow(() -> new NotFoundException("Событие не найдено"));
+        if (requestClient.checkRegistration(eventId, userId)) {
+            collectorClient.collectUserAction(userId, eventId, "ACTION_LIKE", Instant.now());
+        } else {
+            throw new NotFoundException("Пользователь не регистрировался на данное событие");
         }
-        return viewsMap;
     }
 }
